# fastapi-mongo

./: Dockerfile  README.md  docker-compose.yml  mongodb-installation  mongodb_commands  mongoinstall.sh  pyproject.toml  requirements.txt
app/: main.py
app/server/: app_module.py
app/server/crud/: patient_details.py  student.py
app/server/db/: base.py
app/server/models/: patient_details.py  student.py
app/server/routes/: patient_details.py  student.py
