[tool.poetry]
name = "ecg-mongo"
version = "0.1.0"
description = ""
authors = ["deepak-probeplus <deepak@probeplus.in>"]
readme = "README.md"
packages = [{include = "ecg_mongo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
motor = "^3.1.2"
pydantic = "^1.10.7"
decouple = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
